--- a/_post_example/2021-02-23-fuck_1.md
+++ b/_post_example/2021-02-23-fuck_1.md
@@ -1,5 +1,5 @@
 ---
-title: "[백준] 3954 - Brainf**k 인터프리터 <C++>"
+title: "[백준] 3954 - Brainf**k 인터프리터 C++"
 author: TheKeyKim
 date: 2021-02-23 18:00:00 -0500
 categories: [백준, C++]
