--- a/_posts/2021-02-23-BOJ_3954.md
+++ b/_posts/2021-02-23-BOJ_3954.md
@@ -74,12 +74,12 @@ tags: [C++, 백준]
 2. 무한 루프를 제대로 판별하자. 
 
 ## 1. 대괄호의 짝
- 내 코드에서는 hash를 사용했지만, 그냥 배열을 사용해도 된다. 어차피 명령어의 길이가 충분히 짧기 때문이다. 만약 여는 대괄호 '['가 커맨드의 n번째(이하 cmd[n])라고 할 떄 우리는 배열에 해당 여는 대괄호의 짝꿍인 닫는 대괄호 ']'를 미리 메모이제이션하자. <br>
+ 내 코드에서는 hash를 사용했지만, 그냥 배열을 사용해도 된다. 어차피 명령어의 길이가 충분히 짧기 때문이다. 만약 여는 대괄호 '['가 커맨드의 n번째(이하 cmd[n])라고 할 때 우리는 배열에 해당 여는 대괄호의 짝꿍인 닫는 대괄호 ']'를 미리 메모이제이션하자. <br>
  예를 들어, 
 ```
 [++]  
 ```
-위와 같은 인풋이 있다고 하자, 그러면 괄호의 짝꿍의 위치를 저장하는 배열 dic에 대하여, dic[0] = 3, dic[3] = 1이 될 것이다.
+위와 같은 인풋이 있다고 하자, 그러면 괄호의 짝꿍의 위치를 저장하는 배열 dic에 대하여, dic[0] = 3, dic[3] = 0이 될 것이다.
 ## 2. 무한 루프 판별
 작년 즈음에 추가 된 데이터로 엄청나게 많은 수의 코드가 AC를 받지 못하게 된 원흉이다. 무한 루프의 정의에 대해서 먼저 생각을 해야 하는데, 만약 
 ```
