--- a/_posts/2021-03-10-BOJ_10868.md
+++ b/_posts/2021-03-10-BOJ_10868.md
@@ -3,7 +3,7 @@ title: "[백준] 10868 - 최솟값 C++"
 author: TheKeyKim
 date: 2021-03-10 21:29:00 +0900
 categories: [백준, C++]
-tags: [C++, 백준]
+tags: [C++, 백준, seg_tree]
 ---
 
 # 문제링크
