--- a/_posts/2021-03-10-BOJ_10868.md
+++ b/_posts/2021-03-10-BOJ_10868.md
@@ -3,7 +3,7 @@ title: "[백준] 10868 - 최솟값 C++"
 author: TheKeyKim
 date: 2021-03-10 21:29:00 +0900
 categories: [백준, C++]
-tags: [C++, 백준, seg_tree]
+tags: [C++, 백준, segTree]
 ---
 
 # 문제링크
@@ -22,7 +22,7 @@ tags: [C++, 백준, seg_tree]
 
 # 풀이 유형
 ***
-[세그먼트 트리](/tags/seg_tree)
+[세그먼트 트리](/tags/segTree)
 
 # 풀이
 ***
