--- a/_posts/2021-03-09-BOJ_2749.md
+++ b/_posts/2021-03-09-BOJ_2749.md
@@ -1,5 +1,5 @@
 ---
-title: "[백준] 2749- 피보나치3"
+title: "[백준] 2749 - 피보나치3 C++"
 author: TheKeyKim
 date: 2021-03-09 23:00:00 +0900
 categories: [백준, C++]
