--- a/_posts/2021-03-30-BOJ_12967.md
+++ b/_posts/2021-03-30-BOJ_12967.md
@@ -1,5 +1,5 @@
 ---
-title: "[백준] 12967 - pqr"
+title: "[백준] 12967 - pqr C++"
 author: TheKeyKim
 date: 2021-03-29 23:55:00 +0900
 categories: [백준, C++]
@@ -8,7 +8,7 @@ tags: [C++, 백준, math]
 
 # 문제링크
 ***
-[1801-직사각형 만들기](https://www.acmicpc.net/problem/12967)
+[12967-pqr](https://www.acmicpc.net/problem/12967)
 # 문제
 ***
 <p>N개의 수로 이루어진 배열 A과 정수 K가 주어진다. 0 ≤ p &lt; q &lt; r &lt; N 이면서, A[p] * A[q] * A[r]이 K로 나누어 떨어지는 (p, q, r) 쌍의 개수를 구하는 프로그램을 작성하시오.</p>
@@ -24,7 +24,7 @@ tags: [C++, 백준, math]
 
 # 풀이 유형
 ***
-[수학](/tags/)
+[수학](/tags/math)
 
 # 풀이
 ***
