--- a/_posts/2021-03-30-BOJ_12967.md
+++ b/_posts/2021-03-30-BOJ_12967.md
@@ -8,7 +8,7 @@ tags: [C++, 백준, math]
 
 # 문제링크
 ***
-[12967-pqr](https://www.acmicpc.net/problem/12967)
+[12967 - pqr](https://www.acmicpc.net/problem/12967)
 # 문제
 ***
 <p>N개의 수로 이루어진 배열 A과 정수 K가 주어진다. 0 ≤ p &lt; q &lt; r &lt; N 이면서, A[p] * A[q] * A[r]이 K로 나누어 떨어지는 (p, q, r) 쌍의 개수를 구하는 프로그램을 작성하시오.</p>
@@ -38,7 +38,7 @@ tags: [C++, 백준, math]
 
 # 마무리
 ***
-풀이는 간단하지만, 의외로 최대공약수라는 개념을 떠올리기가 어렵다. 무지성 완전탐색에 발을 들이민 순간 시간초과를 마주하게 되는 것이다. 이런 문제들을 풀 때 마다 왜 이 분야가 수학이 중요한지 여러번 깨닫는다. 
+풀이는 간단하지만, 의외로 최대공약수라는 개념을 떠올리기가 어렵다. 무지성 완전탐색에 발을 들이민 순간 시간초과를 마주하게 되는 것이다. 이런 문제들을 풀 때 마다 왜 이 분야가 수학이 중요한지 다시금 깨닫는다. 
 
 # 코드
 ***
